--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@ body {
   
 }
 
-
+canvas{
+  border:2px solid black;
+  width: 100%;
+  box-sizing: border-box;
+}
 .game-intro p {
   font-size: 18px;
   font-family: "Verdana"
