--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0 auto;
   text-align: center;
-  
+  overflow: hidden;
+
 }
 
 canvas{
@@ -38,3 +39,6 @@ body button {
   text-align: center;
 }
 
+#demo {
+  color: white;
+}
